RESOLVED FIXED35400
aria-label isn't respected on option elements
https://bugs.webkit.org/show_bug.cgi?id=35400
Summary aria-label isn't respected on option elements
chris fleizach
Reported 2010-02-25 12:29:50 PST
this affects three forms that option elements take multi-select listboxes popup buttons (select controls) and the menu items that the pop up button turns into
Attachments
Patch (12.84 KB, patch)
2010-02-25 16:32 PST, chris fleizach
no flags
Patch (14.26 KB, patch)
2010-02-25 16:47 PST, chris fleizach
bdakin: review+
chris fleizach
Comment 1 2010-02-25 16:32:39 PST
WebKit Review Bot
Comment 2 2010-02-25 16:41:57 PST
chris fleizach
Comment 3 2010-02-25 16:47:12 PST
chris fleizach
Comment 4 2010-02-25 16:48:50 PST
upload to fix chromium
chris fleizach
Comment 5 2010-03-02 13:16:09 PST
Note You need to log in before you can comment on or make changes to this bug.