aria-label isn't respected on option elements https://bugs.webkit.org/show_bug.cgi?id=35400

Reviewed by Beth Dakin.

WebCore:

When aria-label is used on an <option> element, it can take three forms.
An option in a multi-select list, a popup button and the menu that is displayed
from the popup button. This patches the three requisite locations so that if
aria-label is used, the correct accessibility text is returned.

Test: platform/mac/accessibility/option-with-arialabel.html

* accessibility/AccessibilityListBoxOption.cpp:
(WebCore::AccessibilityListBoxOption::stringValue):
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::getAttribute):
* accessibility/AccessibilityObject.h:
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::getAttribute):
(WebCore::AccessibilityRenderObject::stringValue):
* platform/PopupMenuClient.h:
* platform/mac/PopupMenuMac.mm:
(WebCore::PopupMenu::populate):
* rendering/RenderMenuList.cpp:
(WebCore::RenderMenuList::itemAccessibilityText):
* rendering/RenderMenuList.h:
* rendering/RenderTextControlSingleLine.h:
(WebCore::RenderTextControlSingleLine::itemAccessibilityText):

WebKit/chromium:

* src/SuggestionsPopupMenuClient.h:
(WebKit::SuggestionsPopupMenuClient::itemAccessibilityText):

LayoutTests:

* platform/mac/accessibility/option-with-arialabel-expected.txt: Added.
* platform/mac/accessibility/option-with-arialabel.html: Added.



Canonical link: https://commits.webkit.org/46726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55425 268f45cc-cd09-0410-ab3c-d52691b4dbfc